# task_manager

./: pyproject.toml
taskmanager/: db.sqlite3
taskmanager/taskmanager/: settings.py  urls.py
taskmanager/tasks/: admin.py  converters.py  mixins.py  models.py  services.py  urls.py  views.py
taskmanager/tasks/migrations/: 0001_initial.py  0002_sprint_epic.py
taskmanager/tasks/templates/: 404.html  _footer.html  _header.html
taskmanager/tasks/templates/tasks/: base.html  check_task.html  help.html  home.html  task_confirm_delete.html  task_detail.html  task_form.html  task_list.html
